<resources>
    <string name="app_name">app_01</string>
    <string name="real_app_name">BMI calculator</string>
    <string name="shit_button_01">shit bt01</string>
    <string name="shit_button_02">shit bt02</string>
    <string name="shit_button_03">shit bt03</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="centimeters">Centimeters</string>
    <string name="feet_inches">feet/inches</string>
    <string name="age">Age</string>
    <string name="feet">Feet</string>
    <string name="inches">Inches</string>
    <string name="weight">Weight</string>
    <string name="calculate">CALCULATE</string>
    <string name="bmi_index"></string>
    <string name="bmi_message">Enter values and press CALCULATE</string>

</resources>